ConsoleApp2/ConsoleApp2/ANTLR/BigIPConfigParser.g4
parser grammar BigIPConfigParser;

options { tokenVocab=BigIPConfigLexer; }

config : (record | notRecord)* EOF;

record: recordStart recordContent;

recordContent : LBRACE (contentItem | notRBrace | NEWLINE | WS)* RBRACE | ANY;

recordStart : RECORD_PRE TYPE RECORD_POST;

contentItem : recordContent;

notRBrace : ~RBRACE;

notRecord : .+?;
